apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-website-service
  namespace: website
  labels:
    app: k8s-website
spec:
  selector:
    app: k8s-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
